--- a/index.html
+++ b/index.html
@@ -1,1 +1,298 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Malla Interactiva - Enfermería</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Malla Interactiva - Enfermería</h1>
+  <p>Haz clic en un ramo para cambiar su estado (pendiente → cursando → aprobado → reprobado).</p>
 
+  <div id="malla">
+    <h2>1° Año - 1er Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">MORF-011</small>
+    <h3>Morfología integral</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">QUIM-001</small>
+    <h3>Química general y orgánica</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">BIOL-034</small>
+    <h3>Biología celular</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">FMMP-001</small>
+    <h3>Razonamiento matemático</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-101</small>
+    <h3>Bases teóricas de la enfermería</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>1° Año - 2do Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">BIOL-150</small>
+    <h3>Microbiología</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">BIOL-166</small>
+    <h3>Bioquímica</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-201</small>
+    <h3>Psicología evolutiva</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-202</small>
+    <h3>Socioantropología</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-203</small>
+    <h3>Bases del cuidado de enfermería</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">CEGHC-11</small>
+    <h3>Habilidades comunicativas</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>2° Año - 3er Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">BIOL-178</small>
+    <h3>Fisiología</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">SPAB-110</small>
+    <h3>Salud pública I</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-301</small>
+    <h3>Enfermería en la promoción y prevención en salud</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-302</small>
+    <h3>Cuidados de enfermería en el ciclo vital</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">ING-119</small>
+    <h3>Inglés I</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>2° Año - 4to Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-401</small>
+    <h3>Fisiopatología</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">FARM-121</small>
+    <h3>Farmacología</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">SPAB-111</small>
+    <h3>Salud pública II</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-403</small>
+    <h3>Bases de salud familiar</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-402</small>
+    <h3>Adulto y Adulto mayor I</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">ING-129</small>
+    <h3>Inglés II</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>3° Año - 5to Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">FARM-122</small>
+    <h3>Farmacovigilancia</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-501</small>
+    <h3>Salud familiar I</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-502</small>
+    <h3>Pediatría y Adulto</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-503</small>
+    <h3>Fundamentos de gestión y liderazgo</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-504</small>
+    <h3>Integrador I</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">ING-239</small>
+    <h3>Inglés III</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>3° Año - 6to Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-601</small>
+    <h3>Salud mental</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-602</small>
+    <h3>Adulto y Adulto mayor II</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-603</small>
+    <h3>Métodos de análisis</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-604</small>
+    <h3>Administración de unidades de enfermería</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">ING-249</small>
+    <h3>Inglés IV</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">CEGCT-12</small>
+    <h3>Razonamiento científico y TICS</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>4° Año - 7mo Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-701</small>
+    <h3>Ética y legislación</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-702</small>
+    <h3>Salud familiar II</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-703</small>
+    <h3>Pediatría</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-705</small>
+    <h3>Desarrollo de proyectos</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">CEGPC-13</small>
+    <h3>Pensamiento crítico</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>4° Año - 8vo Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-801</small>
+    <h3>Urgencias y desastres</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-802</small>
+    <h3>Seminario de investigación</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-803</small>
+    <h3>Integrador II</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">CEGRS-14</small>
+    <h3>Responsabilidad social</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>5° Año - 9no Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-901</small>
+    <h3>Integrador III</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+<h2>5° Año - 10mo Semestre</h2>
+
+  <div class="ramo" onclick="toggleEstado(this)">
+    <small class="codigo">EFER-1001</small>
+    <h3>Integrador IV</h3>
+    <p class="estado">Pendiente</p>
+  </div>
+
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
